# puspa

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindCEGUI.cmake  FindOGRE.cmake
Client/: Agent.cc  Agent.h  CMakeLists.txt  main.cc
Client/CEGUI/: CMakeLists.txt  GUI.cpp  GUI.h
Client/CEGUI/datafiles/: Console.layout
Client/Julius/: CMakeLists.txt  Ear.c  Ear.h
Client/Julius/julius-data/: dict-kata  julian.jconf  tiedlist
Client/Julius/julius-data/grammar/: lskk.dfa  lskk.dict  lskk.grammar  lskk.term  lskk.voca
Client/Julius/julius-data/hmm15/: hmmdefs  macros
Client/OGRE/: CMakeLists.txt  Face.cpp  Face.h  GraphicsConfig.h  plugins-unix.cfg  plugins.cfg  plugins_d.cfg  resources.cfg
Client/Socket/: CMakeLists.txt  ClientSocket.cc  ClientSocket.h  SocketConfig.h
Client/default/: GraphicsConfig.h
Client/eSpeak/: CMakeLists.txt  Mouth.h  espeak.cpp  speak.cpp  speech.h
Client/eSpeak/espeak-data/: af_dict  ca_dict  cs_dict  cy_dict  da_dict  de_dict  el_dict  en_dict  eo_dict  es_dict  fi_dict  fr_dict  grc_dict  hbs_dict  hi_dict  hu_dict  hy_dict  id_dict  intonations  is_dict  it_dict  jbo_dict  ku_dict  la_dict  lv_dict  mk_dict  nci_dict  nl_dict  no_dict  pap_dict  phondata  phonindex  phontab  pl_dict  pt_dict  ro_dict  ru_dict  sk_dict  sq_dict  sv_dict  (+5 more)
Client/whirr-sockets/: CMakeLists.txt  SocketConfig.h  whirr-sockets.cc
Common/: CMakeLists.txt  Errors.cc  Errors.h
Documentation/B100/: Anggaran.tex  B100.tex  Biaya.tex  CV.tex  Cashflow.tex  DSJ.tex  Gaji.tex  Kerjasama.tex  Kesimpulan.tex  Laba.tex  NPV.tex  Pasar.tex  Pemasaran.tex  Pendahuluan.tex  Pengembangan.tex  Produksi.tex  Proposal.tex  Rancangan.tex  Referensi.tex  Ringkasan.tex  Sampul.tex  Sejarah.tex  Singkatan.tex  Teknologi.tex  Tujuan.tex  ganttchart.tex  manhour.tex
Documentation/B200/: B200.tex  FRS-Basic.tex  FRS-Changes.tex  FRS-Closing.tex  FRS-Features.tex  FRS-Introduction.tex  FRS-System.tex  HFS-Data.tex  HFS-Design.tex  HFS-Interface.tex  HFS-Introduction.tex  HFS-Mapping.tex  HFS-Module.tex  HFS-State.tex  HFS-System.tex  OVS-Data.tex  OVS-Hardware.tex  OVS-Interfaces.tex  OVS-Introduction.tex  OVS-Software.tex  OVS-System.tex  OVS-Technical.tex  Referensi.tex  Ringkasan.tex  SFS-Data.tex  SFS-Design.tex  SFS-Interface.tex  SFS-Introduction.tex  SFS-Mapping.tex  SFS-State.tex  SFS-Subsystem.tex  SFS-System.tex  Sampul.tex  Sejarah.tex  Singkatan.tex  Spesifikasi.tex  Tujuan.tex
Documentation/B300/: B300.tex  DAT-Introduction.tex  DAT-Structure.tex  DAT-Types.tex  DEL-Change.tex  DEL-Functions.tex  DEL-Module.tex  DEL-Overview.tex  Desain.tex  HWD-Design.tex  HWD-Function.tex  HWD-Interface.tex  HWD-Introduction.tex  HWD-Technical.tex  IFD-External.tex  IFD-Internal.tex  IFD-Introduction.tex  Ringkasan.tex  SSD-Data.tex  SSD-Environment.tex  SSD-Function.tex  SSD-Interfaces.tex  SSD-Introduction.tex  SSD-Overview.tex  SSD-Structures.tex  Sampul.tex  Sejarah.tex  Singkatan.tex  Tujuan.tex
Documentation/B400/: B400.tex  HMT-Adjustment.tex  HMT-Description.tex  HMT-Introduction.tex  HMT-Layout.tex  HMT-Mounting.tex  HMT-Report.tex  Implementasi.tex  Referensi.tex  Ringkasan.tex  SMT-Description.tex  SMT-Environment.tex  SMT-Introduction.tex  SMT-Programming.tex  SMT-Report.tex  Sampul.tex  Sejarah.tex  Singkatan.tex  Tujuan.tex
Documentation/B500/: B500.tex  CHR-New.tex  CHR-Previous.tex  CHR-Requests.tex  HST-Konfigurasi.tex  HST-Procedures.tex  HST-Result.tex  HST-Scope.tex  HST-Syarat.tex  Referensi.tex  Ringkasan.tex  SST-Konfigurasi.tex  SST-Procedures.tex  SST-Result.tex  SST-Scope.tex  SST-Syarat.tex  Sampul.tex  Sejarah.tex  Singkatan.tex  Tujuan.tex  Uji.tex
Server/: CMakeLists.txt  main.cc  puspad.1
Server/AIML/: AI.aiml  Biography.aiml  CMakeLists.txt  Computers.aiml  Default.aiml  Drugs.aiml  Humor.aiml  MuseumGeologi.aiml  Music.aiml  Philosophy.aiml  Sports.aiml  museumlskk.aiml
Server/OpenCog/: Brain.cc  Brain.h  CMakeLists.txt  opencog-chatbot.conf
Server/Socket/: CMakeLists.txt  ServerSocket.cc  ServerSocket.h
Server/libaiml/: Brain.cc  Brain.h  CMakeLists.txt  libaiml.xml  userlist.xml
Theses/23208339/: Comparison.tex  Conclusion.tex  Cover.tex  Experiments.tex  Indonesianising.tex  Introduction.tex  References.bib  Thesis.tex
Theses/23209346/: Abstract.tex  Abstrak.tex  Artificial_Neural_Net.tex  Batasan_Masalah.tex  Daftar_Pustaka.tex  Iterasi_1.tex  Iterasi_2.tex  Kata_Pengantar.tex  Kesimpulan_dan_Saran.tex  Latar_Belakang_Masalah.tex  Pedoman_Penggunaan.tex  Pemenggalan_Kata.tex  Pendahuluan.tex  Pengesahan.tex  Pengolahan_Sinyal_Suara.tex  Pengujian.tex  Perancangan.tex  RESTU.tex  Sampul.tex  Singkatan.tex  Sistematika_Pembahasan.tex  Sound_Localization.tex  Thesis.bib  Thesis.bib.bak  Thesis.tex  Tinjauan_Pustaka.tex  Tujuan_Penelitian.tex
Theses/23209346/bib/: babelbst.tex  el-itb.bst  el-itb.dbj
