install (FILES
	Adverbs.aiml
        AI.aiml
        ALICE.aiml
        Atomic.aiml
        Badanswer.aiml
        Biography.aiml
        Bot.aiml
        Botmaster.aiml
        Client.aiml
        Computers.aiml
        Date.aiml
        Default.aiml
        Dialog.aiml
        Drugs.aiml
        Emotion.aiml
        Food.aiml
        Gossip.aiml
        Human.aiml
        Humor.aiml
        Inquiry.aiml
        Integer.aiml
        Interjection.aiml
        IU.aiml
        Money.aiml
        Movies.aiml
        museumlskk.aiml
        Music.aiml
        Parts.aiml
        Personality.aiml
        Philosophy.aiml
        Pickup.aiml
        Predicates.aiml
        Psychology.aiml
        Reduce.aiml
        Reducer.aiml
        Reductions.aiml
        Salutations.aiml
        Science.aiml
        Sex.aiml
        Spam.aiml
        Sports.aiml
        Stack.aiml
        Stories.aiml
        That.aiml
        update.aiml
        Utilities.aiml
        Xfind.aiml 
        DESTINATION "share/${PROJECT_NAME}/AIML"
	)
